# practical07-oop

./: .gitignore  README.md  pyproject.toml  tf_objectoriented.py
.github/: cspell.json
.github/workflows/: grade.yml
config/: gatorgrade.yml
tests/: test_tf_objectoriented.py
writing/: reflection.md
