[tool.poetry]
name = "practical-07-objectoriented-solution"
version = "0.1.0"
description = ""
authors = ["Janyl Jumadinova <jjumadinova@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7"
taskipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest --cov-report term-missing --cov-fail-under=70 --cov-branch --cov=tf_objectoriented", help = "Run the pytest test suite" }
